@@ -11,7 +11,6 @@ pg_top allows you to monitor PostgreSQL processes. It also allows you to:
     * View currently running SQL statement of a process.
     * View query plan of a currently running SELECT statement.
     * View locks held by a process.
-    * View user index statistics.
 
 CAVEAT: version 3 of pg_top has internal commands that kill and renice
 processes.  Although I have taken steps to insure that pg_top makes
