@@ -21,7 +21,6 @@ P       - sort by CPU usage\n\
 S       - show pg_stat_statements statistics\n\
 Q       - show current query of a process\n\
 T       - sort by time\n\
-X       - show user index statistics\n\
 c       - toggle the display of process commands\n\
 d       - change number of displays to show\n\
 e       - list errors generated by last \"kill\" or \"renice\" command\n\
@@ -31,14 +30,11 @@ k       - kill processes; send a signal to a list of processes\n\
           not avilable when connected to a remote database\n\
 n or #  - change number of processes to display\n\
 o       - specify sort order (%s)\n\
-          index stats (idx_scan, idx_tup_fetch, idx_tup_read)\n\
           i/o stats (%s)\n\
 q       - quit\n\
 r       - renice a process\n\
           not avilable when connected to a remote database\n\
 s       - change number of seconds to delay between updates\n\
-t       - Toggle between cumulative or differential statistics when viewing\n\
-          user table or user index statistics.\n\
 u       - display processes for only one user (+ selects all users)\n\
 \n\
 Not all commands are available on all systems.\n\
